bugfix where dark mentions are not visible

--- a/public/css/base.less
+++ b/public/css/base.less
@@ -806,7 +806,7 @@ table a:not(.btn), .table a:not(.btn) {
 #mentions, #macros {
     ul.mention-list {
         position: fixed;
-        bottom: 51px;
+        bottom: 45px;
         right: 17px;
         left: 330px;
         z-index: 10000;
